--- a/ministry-billing-report/send_s3bucket_watermarks_buidconfig.yaml
+++ b/ministry-billing-report/send_s3bucket_watermarks_buidconfig.yaml
@@ -11,56 +11,6 @@ metadata:
   name: send-s3-watermarks
   uid: 678d71a7-29d1-4601-8d31-ca78cb4cf551
   creationTimestamp: '2021-08-06T20:43:06Z'
-  managedFields:
-    - manager: Mozilla
-      operation: Update
-      apiVersion: build.openshift.io/v1
-      time: '2021-08-06T21:16:27Z'
-      fieldsType: FieldsV1
-      fieldsV1:
-        'f:metadata':
-          'f:annotations':
-            .: {}
-            'f:app.openshift.io/vcs-ref': {}
-            'f:app.openshift.io/vcs-uri': {}
-            'f:openshift.io/generated-by': {}
-          'f:labels':
-            .: {}
-            'f:app': {}
-            'f:app.kubernetes.io/component': {}
-            'f:app.kubernetes.io/instance': {}
-            'f:app.kubernetes.io/part-of': {}
-        'f:spec':
-          'f:output':
-            'f:to':
-              .: {}
-              'f:kind': {}
-              'f:name': {}
-          'f:runPolicy': {}
-          'f:source':
-            'f:contextDir': {}
-            'f:git':
-              .: {}
-              'f:ref': {}
-              'f:uri': {}
-            'f:type': {}
-          'f:strategy':
-            'f:dockerStrategy':
-              .: {}
-              'f:dockerfilePath': {}
-              'f:pullSecret':
-                .: {}
-                'f:name': {}
-            'f:type': {}
-          'f:triggers': {}
-    - manager: openshift-apiserver
-      operation: Update
-      apiVersion: build.openshift.io/v1
-      time: '2021-08-06T21:16:30Z'
-      fieldsType: FieldsV1
-      fieldsV1:
-        'f:status':
-          'f:lastVersion': {}
   namespace: 15be76-tools
   labels:
     app: send-s3-watermarks
@@ -82,6 +32,22 @@ spec:
       pullSecret:
         name: artifactory-creds
       dockerfilePath: send_s3bucket_watermarks_docker
+    env:
+    - name: SKIP_OBJSTOR
+      valueFrom:
+        secretKeyRef:
+          name: ministry-billing-report
+          key: SKIP_OBJSTOR
+    - name: SMTP_SERVER
+      valueFrom:
+        secretKeyRef:
+          name: ministry-billing-report
+          key: SMTP_SERVER
+    - name: DEBUG_EMAIL
+      valueFrom:
+        secretKeyRef:
+          name: ministry-billing-report
+          key: DEBUG_EMAIL
   postCommit: {}
   source:
     type: Git
