added in escclient for demo/troubleshooting

--- a/ministry-billing-report/send_s3bucket_watermarks_cron.yaml
+++ b/ministry-billing-report/send_s3bucket_watermarks_cron.yaml
@@ -4,9 +4,9 @@ metadata:
   name: send-s3bucket-watermarks
   namespace: 15be76-dev
 spec:
-  successfulJobsHistoryLimit: 3
+  successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
-  schedule: '1 * * * *'
+  schedule: '* * * * *'
   jobTemplate:
     spec:
       template:
