--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: relay_bucket_data",
             "type": "python",
             "request": "launch",
-            "program": "ministry-billing-report\\data-relay\\relay_bucket_data.py",
+            "program": "ministry_billing_report\\data-relay\\relay_bucket_data.py",
             "args": [],
             "console": "integratedTerminal"
         },
@@ -16,7 +16,7 @@
             "name": "Python: send_s3bucket_watermarks",
             "type": "python",
             "request": "launch",
-            "program": "ministry-billing-report\\ocp\\send_s3bucket_watermarks.py", 
+            "program": "ministry_billing_report\\ocp\\send_s3bucket_watermarks.py", 
             "args": [],
             "console": "integratedTerminal"
         },
