--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Python: relay_bucket_data",
             "type": "python",
             "request": "launch",
-            "program": "ministry_billing_report\\data-relay\\relay_bucket_data.py",
+            "program": "ministry_billing_report\\metadata_relay\\relay_bucket_data.py",
             "args": [],
             "console": "integratedTerminal"
         },
