Added debug launcher for WIOF data sync

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+ministry_billing_report/metadata_relay/oc.exe
+ministry_billing_report/metadata_relay/run_server_side_manager.bat
