--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,31 +1,48 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [          
+    "configurations": [
         {
-            "name": "Python: Current File",
+            "name": "Python: manage_delete_markers",
             "type": "python",
             "request": "launch",
-            "program": "create_S3bucket_and_user.py",
+            "program": "manage_delete_markers\\objstor_delete_marker.py",
+            "args": [],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: relay_bucket_data",
+            "type": "python",
+            "request": "launch",
+            "program": "ministry_billing_report\\metadata_relay\\relay_bucket_data.py",
+            "args": [],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: get_S3_bucketsize_details",
+            "type": "python",
+            "request": "launch",
+            "program": "scripts\\get_S3_bucketsize_details.py",
             "args": [
-                "-u", "michelle.douville@gov.bc.ca",
-                "-p", "<idir password here>",
-                "-", "listusers"
+                "-o", "c:\\TEMP"
             ],
             "console": "integratedTerminal"
-        },          
+        },
+        {
+            "name": "Python: send_s3bucket_watermarks",
+            "type": "python",
+            "request": "launch",
+            "program": "ministry_billing_report\\ocp\\send_s3bucket_watermarks.py", 
+            "args": [],
+            "console": "integratedTerminal"
+        },
         {
             "name": "Python: Minio Data Sync",
             "type": "python",
             "request": "launch",
             "program": "minio_data_sync.py",
-            "args": [],
-            "console": "integratedTerminal"
-        },          
-        {
-            "name": "Python: WIOF Data Sync",
-            "type": "python",
-            "request": "launch",
-            "program": "wiof_datasync\\wiof_objstor_datasync.py",
             "args": [],
             "console": "integratedTerminal"
         }
