--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,14 @@
             "program": "wiof_datasync\\wiof_objstor_datasync.py",
             "args": [],
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: Uppercase",
+            "type": "python",
+            "request": "launch",
+            "program": "scripts\\bucket_extract_uppercase.py",
+            "args": [],
+            "console": "integratedTerminal"
         }
     ]
 }
