--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,16 @@
 {
     "version": "0.2.0",
-    "configurations": [          
+    "configurations": [                
+        {
+            "name": "PS: sfp_objstor_robo",
+            "type": "PowerShell",
+            "request": "launch",
+            "script": "${workspaceRoot}\\powershell\\sfp_objstor_robo.py",
+            "args": [
+                "-RootOrigin \\\\sfp.idir.bcgov\\S161\\S6202\\Mines Operations\\Regional Operations\\File Digitization Project - Pilot\\0400022 -RootDestination \\\\objectstore.nrs.bcgov\\nrs-iit\\icacls_testing"
+            ],
+            "cwd": "${workspaceRoot}"
+        },      
         {
             "name": "Python: Export_All_Bucket_Metadata",
             "type": "python",
