Script Working Original
Co-authored-by: Heather Hay <hhay1981@users.noreply.github.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
             "name": "PS: sfp_objstor_robo",
             "type": "PowerShell",
             "request": "launch",
-            "script": "${workspaceRoot}\\powershell\\sfp_objstor_robo.py",
+            "script": "${workspaceRoot}\\powershell\\sfp_objstor_robo.ps1",
             "args": [
-                "-RootOrigin \\\\sfp.idir.bcgov\\S161\\S6202\\Mines Operations\\Regional Operations\\File Digitization Project - Pilot\\0400022 -RootDestination \\\\objectstore.nrs.bcgov\\nrs-iit\\icacls_testing"
+                "-RootOrigin \"\\\\sfp.idir.bcgov\\S161\\S6202\\Mines Operations\\Regional Operations\\File Digitization Project - Pilot\\0400828\" -RootDestination \"\\\\objectstore.nrs.bcgov\\nrs-iit\\icacls_testing\\0400828\""
             ],
             "cwd": "${workspaceRoot}"
         },      
