--- a/sfp2geo/ArchiveConfig.json
+++ b/sfp2geo/ArchiveConfig.json
@@ -1,6 +1,6 @@
 {
     "DestinationPath": "E:\\GeoDriveCache\\sfptogeodrive_test",
-    "ObjectStorePathPrefix": "\\\\objectstore2.nrs.bcgov\\S40004",
+    "ObjectStorePathPrefix": "\\\\objectstore2.nrs.bcgov\\",
     "HelpPageURL": "http:\\\\example.com\\help.html",
     "FileAgeInDays": 912,
     "ExcludePatterns": ["*_HR", "*.tmp", "*Readme - Record of Migrated Files*"],
