--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "python.pythonPath": "${workspaceFolder}/ve/Scripts/python.exe",
     "python.analysis.extraPaths": [
         "ve/lib",
-        "../ve/lib"
+        "../ve/lib",
+        "../../ve/lib"
     ]
 }
